--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>Kottayam
+                            <br>Kerala , India Contact: 8547625204</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
