--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>Kottayam
-                            <br>Kerala , India Contact: 8547625204</p>
+                            <br>Kerala , India <br> Contact: 8547625204</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
