--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>Kottayam
-                            <br>Kerala , India <br> Contact: 8547625204</p>
+                            <br>Kerala , India <br> Contact: +91 8547625204</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://www.facebook.com/arifsiyad">ARIF SIYAD</a>.</p>
+                        <p>This Website is Copyright Protected by DMCA & Copyrighted.com. <br>Website created by <a href="http://www.facebook.com/arifsiyad">ARIF SIYAD</a>.</p>
                     </div>
                 </div>
             </div>
@@ -276,7 +276,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; ArifSiyad 2016
                     </div>
                 </div>
             </div>
