--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>This Website is Copyright Protected by DMCA & Copyrighted.com. <br>Website created by <a href="http://www.facebook.com/arifsiyad">ARIF SIYAD</a>.</p>
+                        <h3>support@arifsiyad.com</h3>
+                        <p>This Website is Copyright Protected by DMCA </p>
                     </div>
                 </div>
             </div>
@@ -276,8 +276,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; ArifSiyad 2016
-                    </div>
+                        Copyright &copy; ArifSiyad                    </div>
                 </div>
             </div>
         </div>
