--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>support@arifsiyad.com</h3>
-                        <p>This Website is Copyright Protected by DMCA </p>
+                        <h3>Support</h3>
+                        <p>support@arifsiyad.com <br> Whatsapp : +91 8547625204</p>
                     </div>
                 </div>
             </div>
