--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Support</h3>
-                        <p>support@arifsiyad.com <br> Whatsapp : +91 8547625204</p>
+                        <p>Email : support@arifsiyad.com <br> Whatsapp : +91 8547625204</p>
                     </div>
                 </div>
             </div>
