--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi, Welcome to my website. Im Arif Siyad . I am 18 year self-trained guy, a young part time blogger and computer expert. I am very passionate about Web Designing.</p>
+                    <p>ArifSiyad is a 18 year self-trained guy, a young part time blogger and computer experts for last two years. He is very passionate about blogging and his area of interests are SEO & Website Development.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Specialties : Web Designing, HTML, XHTML, CSS, Bootstrap, PHP, AJAX, Wordpress, Google SEO, Android Debugging. </p>
