--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - ARIF SIYAD Theme</title>
+    <title> ARIF SIYAD - Online Freelancer </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Services</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -167,10 +167,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>ArifSiyad is a 18 year self-trained guy, a young part time blogger and computer experts for last two years. He is very passionate about blogging and his area of interests are SEO & Website Development.</p>
+                    <p>ArifSiyad is a 18 year self-trained guy, a young part time blogger and computer expert for last two years. He is very passionate about blogging and his area of interests are SEO & Website Development.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Specialties : Web Designing, HTML, XHTML, CSS, Bootstrap, PHP, AJAX, Wordpress, Google SEO, Android Debugging. </p>
+                    <p>Specialties : Web Designing, HTML, XHTML, CSS, Bootstrap, PHP, AJAX, Wordpress, SEO, Android Development. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -243,7 +243,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>Kottayam
-                            <br>Kerala , India <br> Contact: +91 8547625204</p>
+                            <br>Kerala , India <br> Contact: +91 9747116977</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -276,7 +276,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; ArifSiyad                    </div>
+                        Copyright &copy; ArifSiyad 2016                    </div>
                 </div>
             </div>
         </div>
